Support Hybrid extraction - Regex + text_level

--- a/UnstructuredData_Transformation_Pipeline/content_extraction.ipynb
+++ b/UnstructuredData_Transformation_Pipeline/content_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cf9c314b",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
       "--- Total Headings Found: 18 ---\n",
       "Found 18 headings.\n",
       "Clauses after TOC-dedup (tables included): 18\n",
-      "✅ Successfully saved merged data to: C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\g33a.csv\n"
+      "✅ Successfully saved merged data to: C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\g33a.csv\n"
      ]
     },
     {
@@ -436,10 +436,10 @@
     "# C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\n",
     "# === Cell 1: Imports & Paths (可沿用) ===\n",
     "DOC_CODE = \"g33a\"\n",
-    "INPUT_JSON = fr\"C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\out_md_mineru\\{DOC_CODE}\\auto\\{DOC_CODE}_content_list.json\"\n",
-    "INPUT_PDF = fr\"C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\{DOC_CODE}.pdf\"\n",
+    "INPUT_JSON = fr\"C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\out_md_mineru\\{DOC_CODE}\\auto\\{DOC_CODE}_content_list.json\"\n",
+    "INPUT_PDF = fr\"C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\{DOC_CODE}.pdf\"\n",
     "DOC_ID = Path(INPUT_JSON).stem.split(\"_content_list\")[0]\n",
-    "OUT_AGGREGATED_CSV = fr\"C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\{DOC_ID}.csv\"\n",
+    "OUT_AGGREGATED_CSV = fr\"C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\{DOC_ID}.csv\"\n",
     "\n",
     "# === Cell 2: Regex & Constants (沿用) ===\n",
     "# HEADING_RE = re.compile(r'^\\s*(\\d+(?:\\.\\d+)*)[.\\)]?\\s+(.*\\S)?\\s*$')\n",
@@ -720,7 +720,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm",
+   "display_name": "graphrag",
    "language": "python",
    "name": "python3"
   },
@@ -734,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
