--- a/UnstructuredData_Transformation_Pipeline/msft_csv.ipynb
+++ b/UnstructuredData_Transformation_Pipeline/msft_csv.ipynb
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading file: C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\SA-1.csv\n",
-      "Output file: C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\graphrag_csv\\SA-1.csv\n",
-      "✅ Success! Saved GraphRAG formatted data to: C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\graphrag_csv\\SA-1.csv\n"
+      "Reading file: C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\g33a.csv\n",
+      "Output file: C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\graphrag_csv\\g33a.csv\n",
+      "✅ Success! Saved GraphRAG formatted data to: C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\graphrag_csv\\g33a.csv\n"
      ]
     },
     {
@@ -46,58 +46,62 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1. Supervisory framework\\n\\n1.1 Introduction\\n...</td>\n",
-       "      <td>SA-1: Risk-based Supervisory Approach</td>\n",
-       "      <td>V.2-23.12.2022</td>\n",
-       "      <td>HKMA</td>\n",
-       "      <td>1. Supervisory framework</td>\n",
+       "      <td>1. Introduction\\n\\n1.1 The current HKMA Guidel...</td>\n",
+       "      <td>g33a: nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1. Introduction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2. The eight types of inherent risk\\n\\n2.1 Cre...</td>\n",
-       "      <td>SA-1: Risk-based Supervisory Approach</td>\n",
-       "      <td>V.2-23.12.2022</td>\n",
-       "      <td>HKMA</td>\n",
-       "      <td>2. The eight types of inherent risk</td>\n",
+       "      <td>2. Customer acceptance policy\\n\\n2.1 This is a...</td>\n",
+       "      <td>g33a: nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2. Customer acceptance policy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3. Four elements of a sound risk management sy...</td>\n",
-       "      <td>SA-1: Risk-based Supervisory Approach</td>\n",
-       "      <td>V.2-23.12.2022</td>\n",
-       "      <td>HKMA</td>\n",
-       "      <td>3. Four elements of a sound risk management sy...</td>\n",
+       "      <td>3. Customer due diligence\\n\\n3.1 This section ...</td>\n",
+       "      <td>g33a: nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3. Customer due diligence</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4. Rating risk management\\n\\n4.1 Factors consi...</td>\n",
-       "      <td>SA-1: Risk-based Supervisory Approach</td>\n",
-       "      <td>V.2-23.12.2022</td>\n",
-       "      <td>HKMA</td>\n",
-       "      <td>4. Rating risk management</td>\n",
+       "      <td>4. Corporate customers\\n\\n4.1 This section sup...</td>\n",
+       "      <td>g33a: nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4. Corporate customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5. Trust and nominee accounts\\n\\n5.1 This sect...</td>\n",
+       "      <td>g33a: nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5. Trust and nominee accounts</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                text  \\\n",
-       "0  1. Supervisory framework\\n\\n1.1 Introduction\\n...   \n",
-       "1  2. The eight types of inherent risk\\n\\n2.1 Cre...   \n",
-       "2  3. Four elements of a sound risk management sy...   \n",
-       "3  4. Rating risk management\\n\\n4.1 Factors consi...   \n",
+       "                                                text  doc_title  version  \\\n",
+       "0  1. Introduction\\n\\n1.1 The current HKMA Guidel...  g33a: nan      NaN   \n",
+       "1  2. Customer acceptance policy\\n\\n2.1 This is a...  g33a: nan      NaN   \n",
+       "2  3. Customer due diligence\\n\\n3.1 This section ...  g33a: nan      NaN   \n",
+       "3  4. Corporate customers\\n\\n4.1 This section sup...  g33a: nan      NaN   \n",
+       "4  5. Trust and nominee accounts\\n\\n5.1 This sect...  g33a: nan      NaN   \n",
        "\n",
-       "                               doc_title         version author  \\\n",
-       "0  SA-1: Risk-based Supervisory Approach  V.2-23.12.2022   HKMA   \n",
-       "1  SA-1: Risk-based Supervisory Approach  V.2-23.12.2022   HKMA   \n",
-       "2  SA-1: Risk-based Supervisory Approach  V.2-23.12.2022   HKMA   \n",
-       "3  SA-1: Risk-based Supervisory Approach  V.2-23.12.2022   HKMA   \n",
-       "\n",
-       "                                       section_title  \n",
-       "0                           1. Supervisory framework  \n",
-       "1                2. The eight types of inherent risk  \n",
-       "2  3. Four elements of a sound risk management sy...  \n",
-       "3                          4. Rating risk management  "
+       "   author                  section_title  \n",
+       "0     NaN                1. Introduction  \n",
+       "1     NaN  2. Customer acceptance policy  \n",
+       "2     NaN      3. Customer due diligence  \n",
+       "3     NaN         4. Corporate customers  \n",
+       "4     NaN  5. Trust and nominee accounts  "
       ]
      },
      "metadata": {},
@@ -111,11 +115,11 @@
     "\n",
     "# --- 1. Set file paths ---\n",
     "# ✅ Please manually modify your input CSV file path\n",
-    "Document_ID = \"SA-1\"\n",
-    "input_csv_path = fr\"C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\{Document_ID}.csv\"\n",
+    "Document_ID = \"g33a\"\n",
+    "input_csv_path = fr\"C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\SPM\\csv_data\\{Document_ID}.csv\"\n",
     "\n",
     "# ✅ Please manually set your output CSV file path\n",
-    "output_csv_path = fr\"C:\\Users\\User\\Desktop\\Microsoft_GraphRAG\\UnstructuredData_Transformation_Pipeline\\graphrag_csv\\{Document_ID}.csv\"\n",
+    "output_csv_path = fr\"C:\\Users\\User\\Desktop\\Compliance-GraphRAG\\UnstructuredData_Transformation_Pipeline\\graphrag_csv\\{Document_ID}.csv\"\n",
     "\n",
     "\n",
     "# Check if input file exists\n",
@@ -138,16 +142,45 @@
     "    current_section_row = None\n",
     "\n",
     "    for index, row in df.iterrows():\n",
-    "        if row['level'] == 1:\n",
+    "        # 確保 level 是數字進行比較\n",
+    "        try:\n",
+    "            is_level_one = int(row['level']) == 1\n",
+    "        except:\n",
+    "            is_level_one = False\n",
+    "\n",
+    "        if is_level_one:\n",
     "            if current_section_row is not None:\n",
     "                aggregated_rows.append(current_section_row)\n",
     "            current_section_row = row.to_dict()\n",
-    "            current_section_row['section_title'] = str(row['full_text'])\n",
+    "            \n",
+    "            # --- ✅ 修正邏輯開始 ---\n",
+    "            # 1. 安全取得字串 (避免 \"nan\")\n",
+    "            cid = str(row['clause_id']) if pd.notna(row.get('clause_id')) else \"\"\n",
+    "            title = str(row['title']) if pd.notna(row.get('title')) else \"\"\n",
+    "\n",
+    "            if cid.endswith(\".0\"):\n",
+    "                cid = cid[:-2]\n",
+    "            \n",
+    "            cid = cid.strip()\n",
+    "            title = title.strip()\n",
+    "\n",
+    "            # 2. 根據 ID 是否為數字開頭決定格式\n",
+    "            if cid and cid[0].isdigit():\n",
+    "                # 數字開頭 -> 加點 (例如: \"1. Introduction\")\n",
+    "                current_section_row['section_title'] = f\"{cid}. {title}\".strip()\n",
+    "            else:\n",
+    "                # 文字開頭 -> 空白 (例如: \"ANNEX 1 Repealed\")\n",
+    "                current_section_row['section_title'] = f\"{cid} {title}\".strip()\n",
+    "            # --- ✅ 修正邏輯結束 ---\n",
+    "\n",
     "        elif current_section_row is not None:\n",
+    "            # 將子章節內容合併到主章節\n",
     "            current_section_row['full_text'] += \"\\n\\n\" + str(row['full_text'])\n",
+    "            # 更新結束頁碼\n",
     "            if row['page_end'] > current_section_row['page_end']:\n",
     "                current_section_row['page_end'] = row['page_end']\n",
     "\n",
+    "    # 加入最後一筆\n",
     "    if current_section_row is not None:\n",
     "        aggregated_rows.append(current_section_row)\n",
     "\n",
@@ -183,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm",
+   "display_name": "graphrag",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
